--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@tanstack/react-query": "^5.90.12",
     "framer-motion": "^12.23.25",
+    "lucide-react": "^0.562.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
