--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.69.0",
+    "undici": "^7.16.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
