--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
     "undici": "^7.16.0",
     "zod": "^4.2.1"
   },
